tests/ui/wf/wf-in-foreign-fn-decls-issue-80468.stderr
error[E0726]: implicit elided lifetime not allowed here
  --> $DIR/wf-in-foreign-fn-decls-issue-80468.rs:13:16
   |
LL | impl Trait for Ref {}
   |                ^^^ expected lifetime parameter
   |
help: indicate the anonymous lifetime
   |
LL | impl Trait for Ref<'_> {}
   |                   ++++

error: aborting due to previous error

For more information about this error, try `rustc --explain E0726`.
